# UniversalRobots

./: .env.example  .gitignore  CLAUDE.md  README.md  aruco_config.json  config.json  config.py  file-Overview.md  homography_matrix.json  main.py  pyproject.toml  requirements.txt  transform.py  workspace_rotation.json
.claude/: settings.local.json
ai/: detection.py  gemini_agent.py  mcp_server.py
docs/: api.md  architecture.md  coordinates.md
robot/: .env  calculate_distance.py  get_pose.py  mcp_server.py  set_robot_zero.py  test_mcp_server.py  test_robot.py  transform.py  ur3_controller.py  zero_pose.json  zero_pose_example.json
tools/: robot_tools.py
vision/: annotation.py  aruco_calibrator.py  camera.py  homography.py  test_camera.py  test_wrist_camera.py
web/: README.md  server.py
web/templates/: index.html
