[project]
name = "universalrobots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.3.1",
    "google-genai>=2.4.0",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "python-dotenv>=1.0",
    "ur-rtde>=1.6.3",
]
